deployment/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    name: backend-diabetes
  ports:
  - port: 8000
    targetPort: 8000
  type: ClusterIP
