deployment/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    name: frontend-diabetes
  ports:
  - port: 5173
    targetPort: 5173
    # nodePort: 30003
  # type: NodePort
  type: ClusterIP
