deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: diabetes-ingress
spec:
  ingressClassName: nginx

  rules:
  - host: diabetes.local

    http:
      paths:

      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 5173

      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 8000
